-- ============================================================
-- TECHSTORE - SUPABASE POSTGRESQL SCHEMA & RLS
-- ============================================================

-- 1. Tabla Usuario
CREATE TABLE IF NOT EXISTS public.usuario (
    id_usuario BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(100) NOT NULL,
    email VARCHAR(150) NOT NULL UNIQUE,
    telefono VARCHAR(20),
    rol VARCHAR(20) NOT NULL DEFAULT 'CLIENTE' CHECK (rol IN ('CLIENTE', 'ADMINISTRADOR')),
    fecha_registro DATE NOT NULL DEFAULT CURRENT_DATE
);

-- 2. Tabla Categoria
CREATE TABLE IF NOT EXISTS public.categoria (
    id_categoria BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(50) NOT NULL UNIQUE,
    descripcion VARCHAR(255),
    estado VARCHAR(15) NOT NULL DEFAULT 'Activa' CHECK (estado IN ('Activa', 'Inactiva'))
);

-- 3. Tabla Producto
CREATE TABLE IF NOT EXISTS public.producto (
    id_producto BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(100) NOT NULL,
    descripcion TEXT,
    precio DECIMAL(10,2) NOT NULL CHECK (precio > 0),
    stock INT NOT NULL DEFAULT 0 CHECK (stock >= 0),
    imagen VARCHAR(255),
    estado VARCHAR(15) NOT NULL DEFAULT 'Activo' CHECK (estado IN ('Activo', 'Agotado', 'Inactivo')),
    fecha_creacion DATE NOT NULL DEFAULT CURRENT_DATE,
    fecha_actualizacion DATE,
    id_categoria BIGINT NOT NULL REFERENCES public.categoria(id_categoria) ON UPDATE CASCADE ON DELETE RESTRICT
);

-- 4. Tabla Carrito
CREATE TABLE IF NOT EXISTS public.carrito (
    id_carrito BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_usuario BIGINT NOT NULL UNIQUE REFERENCES public.usuario(id_usuario) ON UPDATE CASCADE ON DELETE CASCADE,
    fecha_creacion DATE NOT NULL DEFAULT CURRENT_DATE,
    estado VARCHAR(20) NOT NULL DEFAULT 'Vacio' CHECK (estado IN ('Vacio', 'Con Productos', 'Confirmado'))
);

-- 5. Tabla Item Carrito
CREATE TABLE IF NOT EXISTS public.item_carrito (
    id_item BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_carrito BIGINT NOT NULL REFERENCES public.carrito(id_carrito) ON UPDATE CASCADE ON DELETE CASCADE,
    id_producto BIGINT NOT NULL REFERENCES public.producto(id_producto) ON UPDATE CASCADE ON DELETE RESTRICT,
    cantidad INT NOT NULL CHECK (cantidad > 0),
    precio_unitario DECIMAL(10,2) NOT NULL CHECK (precio_unitario > 0),
    subtotal DECIMAL(10,2) NOT NULL CHECK (subtotal >= 0),
    CONSTRAINT uq_carrito_producto_sb UNIQUE (id_carrito, id_producto)
);

-- 6. Tabla Direccion Entrega
CREATE TABLE IF NOT EXISTS public.direccion_entrega (
    id_direccion BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_usuario BIGINT NOT NULL REFERENCES public.usuario(id_usuario) ON UPDATE CASCADE ON DELETE CASCADE,
    nombre_receptor VARCHAR(100) NOT NULL,
    direccion VARCHAR(255) NOT NULL,
    ciudad VARCHAR(100) NOT NULL,
    telefono VARCHAR(20) NOT NULL
);

-- 7. Tabla Pedido
CREATE TABLE IF NOT EXISTS public.pedido (
    id_pedido BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    numero_pedido VARCHAR(20) NOT NULL UNIQUE,
    id_usuario BIGINT NOT NULL REFERENCES public.usuario(id_usuario) ON UPDATE CASCADE ON DELETE RESTRICT,
    id_direccion BIGINT NOT NULL REFERENCES public.direccion_entrega(id_direccion) ON UPDATE CASCADE ON DELETE RESTRICT,
    fecha DATE NOT NULL DEFAULT CURRENT_DATE,
    estado VARCHAR(20) NOT NULL DEFAULT 'Pendiente' CHECK (estado IN ('Pendiente', 'Confirmado', 'Preparando', 'Entregado', 'Rechazado')),
    total DECIMAL(10,2) NOT NULL DEFAULT 0 CHECK (total >= 0)
);

-- 8. Tabla Detalle Pedido
CREATE TABLE IF NOT EXISTS public.detalle_pedido (
    id_detalle BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_pedido BIGINT NOT NULL REFERENCES public.pedido(id_pedido) ON UPDATE CASCADE ON DELETE CASCADE,
    id_producto BIGINT NOT NULL REFERENCES public.producto(id_producto) ON UPDATE CASCADE ON DELETE RESTRICT,
    cantidad INT NOT NULL CHECK (cantidad > 0),
    precio_unitario DECIMAL(10,2) NOT NULL CHECK (precio_unitario > 0),
    subtotal DECIMAL(10,2) NOT NULL CHECK (subtotal >= 0)
);

-- Enable Row Level Security (RLS)
ALTER TABLE public.usuario ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.categoria ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.producto ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.carrito ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.item_carrito ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.direccion_entrega ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.pedido ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.detalle_pedido ENABLE ROW LEVEL SECURITY;

-- Public read policies for MVP Catalog
CREATE POLICY "Catalogo publico" ON public.producto FOR SELECT USING (estado != 'Inactivo');
CREATE POLICY "Categorias publicas" ON public.categoria FOR SELECT USING (estado = 'Activa');
